--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "react-native": "0.71.6",
     "react-native-builder-bob": "^0.20.4",
     "react-native-gesture-handler": "^2.9.0",
-    "react-native-reanimated": "2.14.4",
+    "react-native-reanimated": "^3.0.2",
     "react-test-renderer": "^18.2.0",
     "release-it": "^15.0.0",
     "typescript": "^4.5.2"
