--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
   },
   "homepage": "https://github.com/pakenfit/react-native-pin-input#readme",
   "publishConfig": {
-    "registry": "https://registry.npmjs.org/"
+    "registry": "https://registry.npmjs.org/",
+    "access": "public"
   },
   "devDependencies": {
     "@commitlint/config-conventional": "^17.0.2",
