--- a/package.json
+++ b/package.json
@@ -66,6 +66,8 @@
     "eslint": "^8.4.1",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "expo-clipboard": "^4.1.2",
+    "expo-modules-core": "^1.2.6",
     "jest": "^28.1.1",
     "pod-install": "^0.1.0",
     "prettier": "^2.0.5",
