--- a/package.json
+++ b/package.json
@@ -53,41 +53,37 @@
     "access": "public"
   },
   "devDependencies": {
-    "@commitlint/config-conventional": "^17.0.2",
-    "@evilmartians/lefthook": "^1.2.2",
-    "@react-native-community/eslint-config": "^3.0.2",
-    "@release-it/conventional-changelog": "^5.0.0",
-    "@testing-library/react-native": "^12.0.1",
-    "@types/jest": "^28.1.2",
-    "@types/react": "~17.0.21",
-    "@types/react-native": "0.70.0",
+    "@commitlint/config-conventional": "^17.7.0",
+    "@evilmartians/lefthook": "^1.5.0",
+    "@react-native-community/eslint-config": "^3.2.0",
+    "@release-it/conventional-changelog": "^7.0.2",
+    "@testing-library/react-native": "^12.3.0",
+    "@types/jest": "^29.5.5",
+    "@types/react": "^18.2.23",
+    "@types/react-native": "^0.72.3",
     "commitlint": "^17.0.2",
-    "del-cli": "^5.0.0",
-    "eslint": "^8.4.1",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "expo-clipboard": "^4.1.2",
-    "expo-modules-core": "^1.2.6",
-    "jest": "^28.1.1",
-    "pod-install": "^0.1.0",
-    "prettier": "^2.0.5",
-    "react": "18.2.0",
-    "react-native": "0.71.6",
+    "del-cli": "^5.1.0",
+    "eslint": "^8.50.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "expo-clipboard": "^4.5.0",
+    "expo-modules-core": "^1.5.11",
+    "jest": "^29.7.0",
+    "pod-install": "^0.1.39",
+    "prettier": "^3.0.3",
+    "react": "^18.2.0",
+    "react-native": "^0.72.5",
     "react-native-builder-bob": "^0.20.4",
-    "react-native-gesture-handler": "^2.9.0",
-    "react-native-reanimated": "^3.0.2",
     "react-test-renderer": "^18.2.0",
-    "release-it": "^15.0.0",
-    "typescript": "^4.5.2"
+    "release-it": "^16.2.1",
+    "typescript": "^5.2.2"
   },
   "resolutions": {
     "@types/react": "17.0.21"
   },
   "peerDependencies": {
     "react": "*",
-    "react-native": "*",
-    "react-native-gesture-handler": ">=2.8.0",
-    "react-native-reanimated": ">=2.14.4"
+    "react-native": "*"
   },
   "engines": {
     "node": ">= 16.0.0"
